plugins {
	id 'java'
	id 'org.springframework.boot' version '2.7.5'
	id 'io.spring.dependency-management' version '1.0.15.RELEASE'
	id 'com.palantir.docker' version '0.34.0'
	id 'com.google.protobuf' version '0.8.19'
}

group = 'com.nuvalence'
version = '0.0.1-SNAPSHOT'
sourceCompatibility = '17'

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
	maven {
		url "https://packages.confluent.io/maven/"
	}
	gradlePluginPortal()
}

ext {
	set('springCloudVersion', "2021.0.4")
}

dependencyManagement {
	imports {
		mavenBom "org.springframework.cloud:spring-cloud-dependencies:${springCloudVersion}"
	}
}

dependencies {
	implementation 'org.springframework.cloud:spring-cloud-starter-kubernetes-client-config'
	implementation 'org.springframework.boot:spring-boot-starter-actuator'
	implementation 'org.apache.kafka:kafka-clients'
	implementation 'org.apache.kafka:kafka-streams'
	implementation 'io.confluent:kafka-streams-protobuf-serde:7.2.1'

	implementation 'com.google.protobuf:protobuf-java:3.21.6'
	implementation 'io.grpc:grpc-stub:1.15.1'
	implementation 'io.grpc:grpc-protobuf:1.15.1'

	compileOnly 'org.projectlombok:lombok'

	annotationProcessor 'org.springframework.boot:spring-boot-configuration-processor'
	annotationProcessor 'org.projectlombok:lombok'

	testImplementation 'org.springframework.kafka:spring-kafka'
	testImplementation 'org.springframework.boot:spring-boot-starter-test'
	testImplementation 'org.springframework.kafka:spring-kafka-test'
	testImplementation 'org.apache.kafka:kafka-streams-test-utils'
}

tasks.named('test') {
	useJUnitPlatform()
}

docker {
	dependsOn bootJar
	name "${rootProject.name}/${project.name}"
	dockerfile file("${project.projectDir}/src/main/docker/Dockerfile")
	files tasks.bootJar.outputs, 'kafka-queueing.jar'
}

protobuf {
	protoc {
		// The artifact spec for the Protobuf Compiler
		artifact = 'com.google.protobuf:protoc:3.6.1'
	}
}
